# TCS-Cinema

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/espressif__esp-box/: CMakeLists.txt  Kconfig  esp-box.c  idf_component.yml
components/espressif__esp-box/include/bsp/: esp-box.h
components/m5stack_core_s3/: CMakeLists.txt  README.md  idf_component.yml  m5stack_core_s3.c  m5stack_core_s3_idf4.c  m5stack_core_s3_idf5.c
components/m5stack_core_s3/include/bsp/: esp-bsp.h  m5stack_core_s3.h
main/: display_main.c  idf_component.yml
